update encode song

--- a/src/MusicGeneratorLSTM.ipynb
+++ b/src/MusicGeneratorLSTM.ipynb
@@ -826,9 +826,12 @@
         "\n",
         "# Data visualization\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
-        "from tqdm.notebook import tqdm #for loading bars"
+        "from tqdm.notebook import tqdm #for loading bars\n",
+        "\n",
+        "# Music21\n",
+        "import music21"
       ],
-      "execution_count": 1,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -839,7 +842,7 @@
       "source": [
         "device = torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -849,22 +852,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_0Oql7yYrLCA",
-        "outputId": "8c8f88fa-3617-48bf-90db-357b7af1a759"
+        "outputId": "78d42515-f0fa-4dab-df80-50d0eabb0f35"
       },
       "source": [
         "!git clone https://github.com/petcomputacaoufrgs/papagaio.git"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'papagaio'...\n",
-            "remote: Enumerating objects: 46, done.\u001b[K\n",
-            "remote: Counting objects:   2% (1/46)\u001b[K\rremote: Counting objects:   4% (2/46)\u001b[K\rremote: Counting objects:   6% (3/46)\u001b[K\rremote: Counting objects:   8% (4/46)\u001b[K\rremote: Counting objects:  10% (5/46)\u001b[K\rremote: Counting objects:  13% (6/46)\u001b[K\rremote: Counting objects:  15% (7/46)\u001b[K\rremote: Counting objects:  17% (8/46)\u001b[K\rremote: Counting objects:  19% (9/46)\u001b[K\rremote: Counting objects:  21% (10/46)\u001b[K\rremote: Counting objects:  23% (11/46)\u001b[K\rremote: Counting objects:  26% (12/46)\u001b[K\rremote: Counting objects:  28% (13/46)\u001b[K\rremote: Counting objects:  30% (14/46)\u001b[K\rremote: Counting objects:  32% (15/46)\u001b[K\rremote: Counting objects:  34% (16/46)\u001b[K\rremote: Counting objects:  36% (17/46)\u001b[K\rremote: Counting objects:  39% (18/46)\u001b[K\rremote: Counting objects:  41% (19/46)\u001b[K\rremote: Counting objects:  43% (20/46)\u001b[K\rremote: Counting objects:  45% (21/46)\u001b[K\rremote: Counting objects:  47% (22/46)\u001b[K\rremote: Counting objects:  50% (23/46)\u001b[K\rremote: Counting objects:  52% (24/46)\u001b[K\rremote: Counting objects:  54% (25/46)\u001b[K\rremote: Counting objects:  56% (26/46)\u001b[K\rremote: Counting objects:  58% (27/46)\u001b[K\rremote: Counting objects:  60% (28/46)\u001b[K\rremote: Counting objects:  63% (29/46)\u001b[K\rremote: Counting objects:  65% (30/46)\u001b[K\rremote: Counting objects:  67% (31/46)\u001b[K\rremote: Counting objects:  69% (32/46)\u001b[K\rremote: Counting objects:  71% (33/46)\u001b[K\rremote: Counting objects:  73% (34/46)\u001b[K\rremote: Counting objects:  76% (35/46)\u001b[K\rremote: Counting objects:  78% (36/46)\u001b[K\rremote: Counting objects:  80% (37/46)\u001b[K\rremote: Counting objects:  82% (38/46)\u001b[K\rremote: Counting objects:  84% (39/46)\u001b[K\rremote: Counting objects:  86% (40/46)\u001b[K\rremote: Counting objects:  89% (41/46)\u001b[K\rremote: Counting objects:  91% (42/46)\u001b[K\rremote: Counting objects:  93% (43/46)\u001b[K\rremote: Counting objects:  95% (44/46)\u001b[K\rremote: Counting objects:  97% (45/46)\u001b[K\rremote: Counting objects: 100% (46/46)\u001b[K\rremote: Counting objects: 100% (46/46), done.\u001b[K\n",
-            "remote: Compressing objects:   2% (1/39)\u001b[K\rremote: Compressing objects:   5% (2/39)\u001b[K\rremote: Compressing objects:   7% (3/39)\u001b[K\rremote: Compressing objects:  10% (4/39)\u001b[K\rremote: Compressing objects:  12% (5/39)\u001b[K\rremote: Compressing objects:  15% (6/39)\u001b[K\rremote: Compressing objects:  17% (7/39)\u001b[K\rremote: Compressing objects:  20% (8/39)\u001b[K\rremote: Compressing objects:  23% (9/39)\u001b[K\rremote: Compressing objects:  25% (10/39)\u001b[K\rremote: Compressing objects:  28% (11/39)\u001b[K\rremote: Compressing objects:  30% (12/39)\u001b[K\rremote: Compressing objects:  33% (13/39)\u001b[K\rremote: Compressing objects:  35% (14/39)\u001b[K\rremote: Compressing objects:  38% (15/39)\u001b[K\rremote: Compressing objects:  41% (16/39)\u001b[K\rremote: Compressing objects:  43% (17/39)\u001b[K\rremote: Compressing objects:  46% (18/39)\u001b[K\rremote: Compressing objects:  48% (19/39)\u001b[K\rremote: Compressing objects:  51% (20/39)\u001b[K\rremote: Compressing objects:  53% (21/39)\u001b[K\rremote: Compressing objects:  56% (22/39)\u001b[K\rremote: Compressing objects:  58% (23/39)\u001b[K\rremote: Compressing objects:  61% (24/39)\u001b[K\rremote: Compressing objects:  64% (25/39)\u001b[K\rremote: Compressing objects:  66% (26/39)\u001b[K\rremote: Compressing objects:  69% (27/39)\u001b[K\rremote: Compressing objects:  71% (28/39)\u001b[K\rremote: Compressing objects:  74% (29/39)\u001b[K\rremote: Compressing objects:  76% (30/39)\u001b[K\rremote: Compressing objects:  79% (31/39)\u001b[K\rremote: Compressing objects:  82% (32/39)\u001b[K\rremote: Compressing objects:  84% (33/39)\u001b[K\rremote: Compressing objects:  87% (34/39)\u001b[K\rremote: Compressing objects:  89% (35/39)\u001b[K\rremote: Compressing objects:  92% (36/39)\u001b[K\rremote: Compressing objects:  94% (37/39)\u001b[K\rremote: Compressing objects:  97% (38/39)\u001b[K\rremote: Compressing objects: 100% (39/39)\u001b[K\rremote: Compressing objects: 100% (39/39), done.\u001b[K\n",
-            "remote: Total 46 (delta 19), reused 20 (delta 6), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (46/46), done.\n"
+            "remote: Enumerating objects: 207, done.\u001b[K\n",
+            "remote: Counting objects: 100% (207/207), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (184/184), done.\u001b[K\n",
+            "remote: Total 207 (delta 108), reused 84 (delta 19), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (207/207), 333.06 KiB | 1.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (108/108), done.\n"
           ],
           "name": "stdout"
         }
@@ -876,32 +880,9 @@
         "id": "HXlV5taYsaWQ"
       },
       "source": [
-        "from papagaio.src.GetData import *"
+        "from papagaio.src.encoder import *"
       ],
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nGoDcEjft6XR"
-      },
-      "source": [
-        "import sys\n",
-        "sys.path.extend(['/content/papagaio/src/'])"
-      ],
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Yb3vTEZIsZrW"
-      },
-      "source": [
-        "from papagaio.src.MusicGenDataset import *"
-      ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -920,13 +901,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NxtDWPuJqf7Y",
-        "outputId": "8e44a511-0fa0-43ce-fa50-071660943dec"
+        "outputId": "7a07f844-1e8b-48c1-dc21-f0e718f899b7"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,7 +930,7 @@
       "source": [
         "%cd /content/gdrive/My Drive/Kaggle/papagaio"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -972,7 +953,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -995,12 +976,134 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IbcB0H2B9Qsw",
+        "outputId": "92a9a167-a2d8-4e22-9323-550d037a5610",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%cd /content/papagaio/src"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/papagaio/src\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KCNs5LY58SCU"
+      },
+      "source": [
+        "data_path = '../data/'\n",
+        "out_encoded_path = '../encoded/'\n",
+        "out_decoded_path = '../decoded/'\n",
+        "file = 'All_I_Have_to_Do_Is_Dream'\n",
+        "in_file = data_path + file\n",
+        "out_encoded = out_encoded_path + file\n",
+        "out_decoded = out_decoded_path + file\n",
+        "\n",
+        "N_FRAMES = 36\n",
+        "N_NOTES = 88\n",
+        "MIDI_OFFSET = 20"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M58DhY3D9H5w"
+      },
+      "source": [
+        "# be sure that the dirs exist\n",
+        "if not os.path.isdir(data_path):\n",
+        "    os.mkdir(data_path)\n",
+        "if not os.path.isdir(out_decoded_path):\n",
+        "    os.mkdir(out_decoded_path)\n",
+        "if not os.path.isdir(out_encoded_path):\n",
+        "    os.mkdir(out_encoded_path)"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fWU3o17y9YsY",
+        "outputId": "79f0b782-696c-4224-ff1d-da6758c65739",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 442
+        }
+      },
+      "source": [
+        "# get encoded data and save encoded file\n",
+        "encoded_song = encode_data(in_file,\n",
+        "                           N_FRAMES,\n",
+        "                           N_NOTES,\n",
+        "                           MIDI_OFFSET, \n",
+        "                           save_as=out_encoded\n",
+        "                           )"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Encoding file All_i_have_to_do_is_dream\n",
+            "Encoding Acoustic bass\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:root:Could not retrieve Midi Program from instrument None, skipping.\n",
+            "WARNING:root:Could not retrieve Midi Program from instrument None, skipping.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Encoding Electric guitar\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-a03a1cc6d5e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m                            \u001b[0mN_NOTES\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                            \u001b[0mMIDI_OFFSET\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                            \u001b[0msave_as\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mout_encoded\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m                            )\n",
+            "\u001b[0;32m/content/papagaio/src/encoder.py\u001b[0m in \u001b[0;36mencode_data\u001b[0;34m(path, n_frames, n_notes, midi_offset, save_as, save_folder)\u001b[0m\n\u001b[1;32m    412\u001b[0m                             \u001b[0minstrument_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    413\u001b[0m                             )\n\u001b[0;32m--> 414\u001b[0;31m                 for part in score.parts]\n\u001b[0m\u001b[1;32m    415\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0mparts_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mparts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/papagaio/src/encoder.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    412\u001b[0m                             \u001b[0minstrument_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    413\u001b[0m                             )\n\u001b[0;32m--> 414\u001b[0;31m                 for part in score.parts]\n\u001b[0m\u001b[1;32m    415\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0mparts_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mparts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/papagaio/src/encoder.py\u001b[0m in \u001b[0;36mencode_part\u001b[0;34m(part, n_frames, n_notes, midi_offset, instrument_list, save_part_at)\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m     \u001b[0;31m# get part tempo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 300\u001b[0;31m     \u001b[0mmetronome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetElementsByClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtempo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTempoIndication\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    301\u001b[0m     \u001b[0mbpm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetronome\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetQuarterBPM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/music21/stream/iterator.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m    326\u001b[0m         \u001b[0mfe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatchingElements\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    327\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 328\u001b[0;31m             \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    329\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    330\u001b[0m             \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Ssoa9wb-rbs6"
       },
       "source": [
         "train_ds = load_dataset('/content/gdrive/My Drive/Kaggle/papagaio/saves/acdc.pt')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1011,7 +1114,7 @@
       "source": [
         "train_dl = load_dataloader('/content/gdrive/My Drive/Kaggle/papagaio/saves/acdc.pkl')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1026,7 +1129,7 @@
       "source": [
         "train_dl.dataset.tensors[0][200]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
