Fixed messed up merge and some other stuff

--- a/src/MusicGeneratorLSTM.ipynb
+++ b/src/MusicGeneratorLSTM.ipynb
@@ -3030,7 +3030,7 @@
     }
    ],
    "source": [
-    "!tensorboard --logdir=runs"
+    "# !tensorboard --logdir=runs"
    ]
   },
   {
@@ -3099,6 +3099,7 @@
     "initial_bar = np.array(initial_bar, dtype='float64')\n",
     "initial_bar = torch.from_numpy(initial_bar).float()\n",
     "print(len(intial_bar), initial_bar)"
+    "initial_bar.shape"
    ]
   },
   {
@@ -4530,7 +4531,7 @@
     }
    ],
    "source": [
-    "data_out = decode_data(output, N_FRAMES, N_NOTES, save_as=out_decoded)"
+    "data_out = decode_data(output, N_FRAMES, save_as=out_decoded)"
    ]
   },
   {
