Added zipped proto dataset

--- a/src/Bi-LSTM.ipynb
+++ b/src/Bi-LSTM.ipynb
@@ -410,6 +410,7 @@
     "class BI_LSTM(nn.Module):\n",
     "  def __init__(self, input_size, hidden_size, num_layers, output_size):\n",
     "    super(BI_LSTM, self).__init__()\n",
+    "\n",
     "    self.hidden_size = hidden_size\n",
     "    self.num_layers = num_layers\n",
     "    self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=False, bidirectional=True)\n",
@@ -418,6 +419,9 @@
     "    self.relu = nn.ReLU()\n",
     "    self.softplus = nn.Softplus(beta=500, threshold=0)\n",
     "    self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    # self.fromInstrument = \n",
+    "    # self.toInstrument = \n",
     "\n",
     "  def forward(self, x, hidden, cell):\n",
     "    # Passing in the input and hidden state into the model and obtaining outputs\n",
@@ -490,7 +494,7 @@
    "metadata": {
     "collapsed": false,
     "gradient": {
-     "editing": true,
+     "editing": false,
      "source_hidden": false
     },
     "jupyter": {
@@ -669,20 +673,20 @@
    },
    "outputs": [],
    "source": [
+    "SETTINGS = {\n",
+    "  'RESOLUTION': 36, # Frame per measure amount\n",
+    "  'KEYBOARD_SIZE': 88, # Amount of keys in the Model's Keyboard\n",
+    "  'KEYBOARD_OFFSET': 20 # MIDI index for the first Model's Keyboard key\n",
+    "}\n",
     "\n",
-    "RESOLUTION = 36 # Frame per measure amount\n",
-    "\n",
-    "MIDI_OFFSET = 20 # MIDI index for the first Model's Keyboard key\n",
-    "\n",
-    "KEYBOARD_SIZE = 88 # Amount of keys in the Model's Keyboard\n",
     "\n",
     "NUM_LAYERS = 4\n",
     "\n",
     "# Instantiate the model with hyperparameters\n",
     "# We'll also set the model to the device that we defined earlier\n",
-    "model = BI_LSTM(input_size=KEYBOARD_SIZE,\n",
-    "                output_size=KEYBOARD_SIZE,\n",
-    "                hidden_size=RESOLUTION,\n",
+    "model = BI_LSTM(input_size=SETTINGS.KEYBOARD_SIZE,\n",
+    "                output_size=SETTINGS.KEYBOARD_SIZE,\n",
+    "                hidden_size=SETTINGS.RESOLUTION,\n",
     "                num_layers=NUM_LAYERS).to(device)"
    ]
   },
@@ -707,7 +711,7 @@
    "metadata": {
     "collapsed": false,
     "gradient": {
-     "editing": true,
+     "editing": false,
      "source_hidden": false
     },
     "jupyter": {
@@ -723,7 +727,7 @@
     "MODELS_PATH = '../models/'\n",
     "MODEL_NAME = 'BI_LSTM'\n",
     "\n",
-    "N_EPOCHS = 15 # Number of times that the model will go trough all the "
+    "N_EPOCHS = 30 # Number of times that the model will go trough all the "
    ]
   },
   {
@@ -803,7 +807,7 @@
     "datasetPath = f'../datasets/codification/{datasetName}/'\n",
     "modelsPath  = '../models/{datasetName}/'\n",
     "\n",
-    "INSTRUMENT = 'Alto saxophone'\n",
+    "INSTRUMENT = 'Electric Guitar'\n",
     "\n",
     "instrumentDataset = createInstrumentDataset(datasetPath, INSTRUMENT, RESOLUTION)\n",
     "print(f'Dataset {datasetName}, Instrument {INSTRUMENT}, Instrument Dataset size {len(instrumentDataset)}')"
@@ -845,7 +849,7 @@
     "training_ds = splitDataset(instrumentDataset, RESOLUTION)\n",
     "training_dl = DataLoader(training_ds, batch_size=1, shuffle=False)\n",
     "\n",
-    "print(f'Training DataLoader length:\\t{len(training_dl.dataset.tensors[0])}')"
+    "print(f'Amount of training examples:\\t{len(training_dl.dataset.tensors[0])}')"
    ]
   },
   {
@@ -867,7 +871,7 @@
    "metadata": {
     "collapsed": false,
     "gradient": {
-     "editing": false,
+     "editing": true,
      "source_hidden": false
     },
     "jupyter": {
