--- a/Notebooks/generation.ipynb
+++ b/Notebooks/generation.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "# INSTRUMENT = 'Piano'\n",
     "# Read context file\n",
-    "CONTEXT = pd.read_pickle(\"Pop1/C_major_scale.pkl\")\n",
+    "CONTEXT = pd.read_pickle(\"C_major_scale/C_major_scale.pkl\")\n",
     "\n",
     "# Filter by instrument\n",
     "# CONTEXT = CONTEXT[CONTEXT.index==INSTRUMENT]\n",
