--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -371,7 +371,7 @@
     "device = torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "# Data Settings\n",
-    "path = 'Pop1'\n",
+    "path = 'C_major_scale'\n",
     "resolution = 16\n",
     "keyboard_size = 88\n",
     "\n",
